@@ -1,5 +1,9 @@
 2014-04-22
 
+	* src/main.c: fix_font_setting(): improved font name fixing.
+
+2014-04-22
+
 	* makewin32.sh: save build log.
 
 2014-04-21
